@@ -1,4 +1,4 @@
-# $Id: Makefile.vc,v 1.16 2006-06-07 15:39:03 dron Exp $
+# $Id: Makefile.vc,v 1.17 2006-09-20 13:34:16 fwarmerdam Exp $
 #
 # Copyright (C) 2004, Andrey Kiselev <dron@ak4719.spb.edu>
 #
@@ -80,11 +80,11 @@ OBJ	= \
 
 all:	libtiff.lib $(DLLNAME)
 
-tif_config.h:	tif_config.h.vc
-	copy tif_config.h.vc tif_config.h
+tif_config.h:	tif_config.vc.h
+	copy tif_config.vc.h tif_config.h
 
-tiffconf.h:	tiffconf.h.vc
-	copy tiffconf.h.vc tiffconf.h
+tiffconf.h:	tiffconf.vc.h
+	copy tiffconf.vc.h tiffconf.h
 
 libtiff.lib:	tif_config.h tiffconf.h $(OBJ)
 	$(AR) /out:libtiff.lib $(OBJ) $(LIBS)
