@@ -1,3 +1,8 @@
+2006-09-20  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff: Rename config.h.vc and tif_config.h.vc to config.vc.h and 
+	tif_config.vc.h for easier identification by folks using an IDE.
+
 2006-07-25  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tif_msdos.c: Avoid handle leak for failed opens.  c/o Thierry Pierron
